# tee-otc

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  compose.test-db.yml  docker-compose.yml
.cargo/: config.toml
.sqlx/: query-23e521710d5bcbf6acbfe199305aa9cdeabe949677a49629f10761ed03cfe71c.json  query-2578b3d57ea74642c1c53d05c32b31921bcafd098377c1e4af599d6d72a5330b.json
artifacts/: GenericERC20.sol
crates/blockchain-utils/: Cargo.toml
crates/blockchain-utils/src/: generic_erc20.rs
crates/common/: Cargo.toml
crates/common/src/: alloy_ext.rs  bitcoin_wallet.rs  fee_calc.rs  lib.rs
crates/devnet/: Cargo.toml
crates/devnet/artifacts/: SimpleERC20.sol
crates/devnet/src/: bitcoin_devnet.rs  evm_devnet.rs  lib.rs
crates/devnet/src/token_indexerd/: mod.rs
crates/disperse-contract/: Cargo.toml
crates/disperse-contract/src/: lib.rs
crates/evm-token-indexer-client/: Cargo.toml  README.md
crates/evm-token-indexer-client/src/: lib.rs
crates/otc-auth/: Cargo.toml
crates/otc-auth/src/: lib.rs
crates/otc-chains/: Cargo.toml
crates/otc-chains/src/: bitcoin.rs  error.rs  ethereum.rs  key_derivation.rs  lib.rs  registry.rs  traits.rs
crates/otc-mm-protocol/: Cargo.toml  README.md
crates/otc-mm-protocol/src/: errors.rs  lib.rs  messages.rs  version.rs
crates/otc-models/: Cargo.toml
crates/otc-models/src/: api_key.rs  chain.rs  constants.rs  lib.rs  quote.rs  status.rs  supported_currencies.rs  swap.rs  swap_transitions.rs  wallet.rs
crates/otc-protocols/: Cargo.toml
crates/otc-protocols/src/: lib.rs
crates/otc-protocols/src/mm/: messages.rs  mod.rs  version.rs
crates/otc-protocols/src/rfq/: mod.rs
crates/otc-rfq-protocol/: Cargo.toml
crates/otc-rfq-protocol/src/: lib.rs
evm-token-indexer/: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  package.json  pnpm-lock.yaml  ponder.config.ts  ponder.schema.ts  postgresql.conf
evm-token-indexer/src/: index.ts
evm-token-indexer/src/api/: index.ts
integration-tests/: Cargo.toml  otc-server.toml
integration-tests/src/: bitcoin_wallet_test.rs  evm_wallet_nonce_retry_test.rs  evm_wallet_test.rs  indexer_client_test.rs  lib.rs  market_maker_otc_auth_test.rs  price_oracle_test.rs  quote_storage_test.rs  rfq_flow_test.rs  simple_swap_test.rs
integration-tests/src/utils/: mod.rs  test_whitelisted_market_makers.json
sqlx-sqlite-shim/: Cargo.toml
sqlx-sqlite-shim/src/: lib.rs
src/: lib.rs
