[workspace]
resolver = "2"
members = [
    "bin/otc-server",
    "crates/otc-models",
    "crates/otc-chains",
    "crates/otc-mm-protocol",
    "bin/rfq-server"
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/riftresearch/tee-otc"

[workspace.dependencies]
# Internal dependencies
otc-models = { path = "crates/otc-models" }
otc-chains = { path = "crates/otc-chains" }
otc-mm-protocol = { path = "crates/otc-mm-protocol" }

tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
snafu = { version = "0.8", features = ["std", "backtrace"] }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

alloy = { version = "1.0", features = ["full"] }
config = { version = "0.14", features = ["toml"] }
zeroize = { version = "1.8", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
hex = "0.4"
getrandom = "0.2"
toml = "0.8"
bitcoin = "0.32"
bitcoincore-rpc = "0.19"


[profile.dev.package.sqlx-macros]
opt-level = 3