[workspace]
resolver = "2"
members = [
    "bin/otc-server",
    "bin/market-maker",
    "bin/rfq-server",
    "bin/api-key-manager",
    "crates/common",
    "crates/otc-models",
    "crates/otc-chains",
    "crates/otc-mm-protocol",
    "integration-tests"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/riftresearch/tee-otc"

[workspace.dependencies]
# Internal dependencies
otc-models = { path = "crates/otc-models" }
otc-chains = { path = "crates/otc-chains" }
otc-mm-protocol = { path = "crates/otc-mm-protocol" }
common = { path = "crates/common" }

otc-server = {path = "bin/otc-server"}
market-maker = {path = "bin/market-maker"}

tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
snafu = { version = "0.8", features = ["std", "backtrace"] }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

alloy = { version = "1.0", features = ["full"] }
config = { version = "0.14", features = ["toml"] }
zeroize = { version = "1.8", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
hex = "0.4"
getrandom = "0.2"
toml = "0.8"
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
dashmap = "6.1"
futures-util = "0.3"
tokio-tungstenite = "0.24"
url = "2.5"
argon2 = "0.5"
rand = "0.8"
dialoguer = "0.11"
ctor = "0.2"
reqwest = "0.12.22"


[profile.dev.package.sqlx-macros]
opt-level = 3