[workspace]
resolver = "2"
members = [
    "bin/*",
    "crates/*",
    "integration-tests"
]
exclude = ["empty-sqlite-shim"]

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/riftresearch/tee-otc"

[workspace.dependencies]
# Internal dependencies
otc-models = { path = "crates/otc-models" }
otc-chains = { path = "crates/otc-chains" }
otc-mm-protocol = { path = "crates/otc-mm-protocol" }
rfq-server = {path = "bin/rfq-server"}
common = { path = "crates/common" }
devnet = { path = "crates/devnet" }
evm-token-indexer-client = { path = "crates/evm-token-indexer-client" }
otc-server = {path = "bin/otc-server"}
market-maker = {path = "bin/market-maker"}

# All of the following dependences (before the empty line) are implicitly linked to the same version, if one of them is updated they must all be updated simultaneously 
bitcoin = { version = "0.32.0", default-features = false, features = ["serde", "base64", "secp-recovery"] }
bitcoincore-rpc-async = { git = "https://github.com/riftresearch/rust-bitcoincore-rpc-async", rev = "5113a3bff59a8d1afdd0f37b7df707a25567f54f" }
corepc-node = { version = "0.8.0", features = ["29_0", "download"] }
electrsd = { git = "https://github.com/RCasatta/electrsd", rev = "bdc97e879bad82e13e69c74d898271db12224f44", features = ["corepc-node_29_0", "esplora_a33e97e1", "legacy"] }
esplora-client = {git = "https://github.com/riftresearch/rust-esplora-client" , rev = "a571328ff799993f877d87db8dad6e4c6b313225", features = ["async", "tokio"]}


alloy = { version = "1.0.23", features = ["full", "node-bindings", "json-rpc"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
snafu = { version = "0.8", features = ["std", "backtrace"] }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.14", features = ["toml"] }
zeroize = { version = "1.8", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
getrandom = "0.2"
toml = "0.8"
dashmap = "6.1"
futures-util = "0.3"
tokio-tungstenite = "0.24"
url = "2.5"
argon2 = "0.5"
rand = "0.8"
dialoguer = "0.11"
ctor = "0.2"
reqwest = "0.12.22"
dirs = "6.0.0"
tempfile = "3.20.0"
fs2 = "0.4"
backoff = { version = "0.4.0", features=["tokio"] }
sha2 = "0.10"
hkdf = "0.12"
bip39 = "2.1.0"
async-trait = "0.1"
bitcoin-coin-selection =  { version = "0.7.0", features = ["rand"]}
sqlx = { version = "0.8",  features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "migrate"] }
bdk_wallet = { version = "2.0.0", features=["rusqlite"] }
bdk_esplora = { version = "0.22.0", features=["tokio","async"]}

[profile.dev.package.sqlx-macros]
opt-level = 3

[patch.crates-io]
corepc-node = { git = "https://github.com/alpinevm/corepc", rev = "dc4809ee032b378097c37e73e2929ceb9ee62c54" }
sqlx-sqlite = { path = "sqlx-sqlite-shim" }