[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "integration_tests"
path = "src/lib.rs"

[dependencies]
tokio = {workspace = true}
ctor = {workspace = true}
tracing-subscriber = { workspace = true }
otc-server = {workspace = true }
market-maker = {workspace = true }
sqlx = {workspace = true}
reqwest = {workspace = true}
serde_json = {workspace = true}
devnet = {workspace = true}
alloy = {workspace =true}
tracing = {workspace =true}
evm-token-indexer-client = {workspace = true}
bitcoincore-rpc-async = {workspace = true}
bitcoin = {workspace = true}
common = {workspace = true}
otc-models = {workspace = true}
uuid = {workspace= true}