[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = {workspace = true}
bitcoin = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
backoff = { workspace = true }
snafu = { workspace = true }
bitcoin-coin-selection = {workspace = true}
bip39 = {workspace = true}