[package]
name = "devnet"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json = { workspace = true }
corepc-node = { workspace = true }
tempfile = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
bitcoincore-rpc-async = { workspace = true }
electrsd = { workspace = true}
esplora-client = {workspace = true}
tracing = { workspace = true }
bitcoin = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
common = {workspace = true}
bip39 = {workspace = true}
snafu = {workspace = true}
reqwest = {workspace = true}
uuid = {workspace= true}
disperse-contract = {workspace=true}

# these dependences below here should be removed to be replaced with the project preferred crates of tracing and snafu respectively
log = "0.4.27"
eyre = "0.6.12"