[package]
name = "evm-token-indexer-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
backoff = { workspace = true }
snafu = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
 