[package]
name = "otc-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
otc-models = { path = "../otc-models" }
snafu = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.20"