[package]
name = "otc-chains"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
otc-models = { workspace = true }
async-trait = "0.1"
snafu = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Bitcoin dependencies
bitcoin = "0.32"
bitcoincore-rpc = "0.19"

# Ethereum dependencies (using Alloy)
alloy = { workspace = true }

# Common
rand = "0.8"
hex = { workspace = true }
sha2 = "0.10"
hkdf = "0.12"
getrandom = { workspace = true }