[package]
name = "otc-chains"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
otc-models = { workspace = true }
async-trait = "0.1"
snafu = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Bitcoin dependencies
bitcoin = {workspace = true}
bitcoincore-rpc-async = {workspace=true}

# Ethereum dependencies (using Alloy)
alloy = { workspace = true }

# Common
rand = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
getrandom = { workspace = true }