[package]
name = "otc-chains"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
otc-models = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = {workspace = true}
chrono = {workspace = true}

blockchain-utils = {workspace=true}

# Bitcoin dependencies
bitcoin = {workspace = true}
bitcoincore-rpc-async = {workspace=true}
esplora-client = {workspace = true}

# Ethereum dependencies (using Alloy)
alloy = { workspace = true }
evm-token-indexer-client = {workspace=true}

# Common
rand = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
getrandom = { workspace = true }