[package]
name = "otc-mm-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
otc-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
snafu = { workspace = true }