[package]
name = "otc-models"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }