[package]
name = "otc-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
alloy = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
sqlx = { workspace = true, optional = true }
snafu = { workspace = true }
argon2 = { workspace = true }

[features]
default = []
sqlx = ["dep:sqlx"]

[dev-dependencies]
serde_json = { workspace = true }